fix(ops): align Dockerfile SERVER_PORT default with project standard (8080→37777)
Also remove misleading --build-arg JAVA_OPTS examples from DEPLOYMENT.md
and DEPLOYMENT-zh-CN.md (Dockerfile does not define ARG JAVA_OPTS)